# metaclean

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preinstall.js  start-local.sh
.github/workflows/: release.yml
artifacts/metaclean/: .gitignore  index.html  package.json  vite.config.ts
artifacts/metaclean/.replit-artifact/: artifact.toml
artifacts/metaclean/src/: App.tsx  index.css
artifacts/metaclean/src/components/: artist-manager.tsx  metadata-editor.tsx
artifacts/metaclean/src/hooks/: use-metaclean.ts
artifacts/metaclean/src/lib/: artists.ts  ffmpeg.ts  id3.ts  wav.ts
desktop/: package.json  vite.config.ts
desktop/desktop/: Cargo.toml  tauri.conf.json
desktop/desktop/capabilities/: default.json
desktop/desktop/icons/: icon.icns
desktop/desktop/permissions/: app.toml
desktop/desktop/src/: main.rs
desktop/docs/: Developer_Guide.md
desktop/scripts/: build.sh  copy-ffmpeg.cjs  setup_env.sh  sign_notarize.sh
desktop/src/: App.tsx  index.css
desktop/src/components/: metadata-editor.tsx  theme-provider.tsx
desktop/src/hooks/: use-artists.ts  use-metaclean.ts
desktop/src/lib/: ffmpeg.ts  lame-mp3.ts  tauri-bridge.ts  utils.ts
