[package]
name = "metaclean-desktop"
version = "1.0.0"
description = "MetaClean macOS Desktop Application"
authors = ["MetaClean"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = ["devtools"] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-notification = "2.2.0"
tauri-plugin-clipboard-manager = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = "4.1.1"
dirs = "6.0.0"
base64 = "0.22"

[profile.release]
panic = "abort" # Strip panics for smaller binary size
codegen-units = 1 # Optimize for size/speed
lto = true # Link-time optimization for smaller binaries
opt-level = "s" # Optimize for size
strip = true # Strip symbols to reduce binary size
